Fix Credit Card alignment on checkout page. See #258.

--- a/css/less/pages.less
+++ b/css/less/pages.less
@@ -954,8 +954,8 @@ html.js .edd_download_purchase_form label .edd_price_option_name {
 }
 
 #edd_checkout_form_wrap span.card-type {
-	top: 52px;
-	right: 390px;
+	top: 54px;
+	right: 281px;
 }
 
 .theme-preview {
